tests/vertical-slice/reject/fork_block_arg_type_mismatch.hew
// Reject fixture: fork-block body with a type-mismatched argument.
//
// Arg-bearing single-call fork blocks are a first-class form: the checker now
// visits the body and type-checks the callee arguments. `fork { flag(42); }`
// (flag: bool, given i64 literal 42) is rejected by the checker with a
// source-spanned `type mismatch` diagnostic BEFORE MIR or codegen see the
// call — so it can never escape to a span-less `E_CODEGEN_FRONT … Call
// parameter type does not match function signature!`.
//
// This fixture pins the checker's fork-block body coverage: a bad argument is
// a real type error, not a blunt shape reject.
//
// Harness verb: hew compile
// Expected diagnostics:
//   - "type mismatch: expected `bool`, found `i64`"
//   - NOT E_CODEGEN_FRONT
fn flag(b: bool) {
    println(f"{b}");
}

actor _Worker {
    receive fn run() {
        scope {
            fork {
                flag(42);
            };
        };
    }
}

fn main() -> i64 {
    let w = spawn _Worker;
    w.run();
    0
}
